--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
-<h1>INPUT</h1>
-<form action="/" method='post'>
-    <div class='container'>
+    <img class="welcome-pic" src="../static/icons/logo.png" alt="Spotfox™">
+    <form class='input-form' action='/login' method='post' onsubmit="login(event)">
         <input type="text" placeholder="Username" name="username" required>
         <input type="password" placeholder="Password" name="password" required>
-        <button type="submit">Login</button>
-    </div>
-</form>
+        <input type="submit" value="Login">
+    </form>
+    <a class="welcome-link" class="bar" href="/signup">Create account</a>
 {% endblock %}
