--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,7 @@
         <meta charset="utf-8">
         <meta name="Spotfox™" content="Spotfox">
         <link rel="stylesheet" href="../static/css/main.css">
-        <script>
-            var serverData = '{{ serverData }}'; 
-        </script>
+        <link rel="stylesheet" href="../static/css/bootstrap/css/bootstrap.css">
         <script src="../static/js/main.js"></script>
     </head>
     <body>
