--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     {% block main %}
     {% endblock %}
 </div>
-<a class="welcome-link" href='/logout'>LOGOUT</a>
-<a class="welcome-link" href='/settings'>SETTINGS</a>
+<a class="link" href='/logout'>LOGOUT</a>
+<a class="link" href='/settings'>SETTINGS</a>
 {% include "navbar.html" %}
 {% endblock %}
