--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block body %}
-    <img class="welcome-pic" src="../static/icons/logo.png" alt="Spotfox™">
-    <div >
-        <a class="welcome-link" href="/signup">Sign Up</a>
-        <a class="welcome-link" href="/login">Login</a>
+    <div class="welcome">
+        <img class="welcome-pic" src="../static/icons/logo.png" alt="Spotfox™">
+        <a class="welcome-link link" href="/signup">Sign Up</a>
+        <a class="welcome-link link" href="/login">Login</a>
     </div>
 {% endblock %}
