--- a/templates/login.html
+++ b/templates/login.html
@@ -6,5 +6,5 @@
         <input type="password" placeholder="Password" name="password" required>
         <input type="submit" value="Login">
     </form>
-    <a class="welcome-link" class="bar" href="/signup">Create account</a>
+    <a class="link" class="bar" href="/signup">Create account</a>
 {% endblock %}
