--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,22 @@
 {% block body %}
-<div class="navbar">
-    <div class="navbar-item">Home</div>
-    <div class="navbar-item">Earn</div>
-    <div class="navbar-item">VIP</div>
-    <div class="navbar-item">Task</div>
-    <div class="navbar-item">My</div>
-</div>
+<nav class="page-navbar navbar">
+    <ul class="navbar-list navbar-list">
+        <li class="navbar-group">
+            <a href="#" class="navbar-link text-underlined">Home</a>
+        </li>
+        <li class="navbar-group">
+            <a href="#" class="navbar-link text-underlined">Earn</a>
+        </li>
+        <li class="navbar-group">
+            <a href="#" class="navbar-link text-underlined">VIP</a>
+        </li>
+        <li class="navbar-group">
+            <a href="#" class="navbar-link text-underlined">Task</a>
+        </li>
+        <li class="navbar-group">
+            <a href="#" class="navbar-link text-underlined">Account</a>
+        </li>
+
+    </ul>
+</nav>
 {% endblock %}
