--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block body %}
-<img class="welcome-pic" src="../static/icons/logo.png" alt="Spotfox™">
 <form class="input-form" action="/signup" method='post' onsubmit="signup(event)">
-    <input type="text" placeholder="Username" name="username" required>
+    <img class="welcome-pic" src="../static/icons/logo.png" alt="Spotfox™">
+    <input type="text" placeholder="Username" name="username" minlength="8" maxlength="30" required>
     <input type="email" placeholder="Email" name="email" required>
-    <input type="password" placeholder="Password" name="password" required>
+    <input type="password" placeholder="Password" name="password" minlength="8" maxlength="30" required>
+    <input type="password" placeholder="Confirm" name="password" minlength="8" maxlength="30" required>
+    <input type="text" placeholder="Referral" name="referral">
     <input type="submit" value="Sign Up">
 </form>
-<a class="welcome-link" href="/login">Log in</a>
+<a class="link" href="/login">Log in</a>
 {% endblock %}
