--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,7 @@ body, html {
 
 .wrap {
     display: flex;
+    flex-wrap: wrap;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -69,9 +70,10 @@ body, html {
 }
 
 .welcome-pic {
-    width: 10em;
+    display: block;
+    width: 12em;
     height: auto;
-    margin: 0 9em 0em 9em;
+    margin: 5em 9em 5em 9em;
     z-index: 1;
 }
 
@@ -105,30 +107,29 @@ a:hover {
 }
 
 .input-form {
+    display: block;
     text-align: center;
-    vertical-align: center;
-    padding: 0em auto;
 }
 
 input {
-    font-size: 1em;
+    display: block;
     line-height: 1.5;
-    max-width: 15em;
-    min-width: 15em;
-    height: 2.5em;
+    max-width: 18em;
+    min-width: 18em;
+    height: 3.5em;
     color: #666;
     background: #e6e6e6;
     border-radius: 0.8em;
-    display: block;
     position: relative;
-    padding: 0.2em;
     margin: 1em 0 1em 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     outline: none;
     border: none;
+    padding: 0.1em;
     text-align: center;
+    font-size: 1.1em;
 }
 
 input:focus {
