--- a/static/css/main.css
+++ b/static/css/main.css
@@ -29,6 +29,8 @@
 	--textUnderlinedLineColor: white;
     --basicBackgroundColor: linear-gradient(-135deg, rgba(200, 80, 192), rgba(25, 35, 82));
     --basicBackgroundColorFaded: linear-gradient(-135deg, rgba(200, 80, 192, 0.4), rgba(25, 35, 82, 0.4));
+    --greenLinear: linear-gradient(-135deg, rgb(50, 105, 50), rgb(15, 201, 15));
+    --grayLinearFaded: linear-gradient(-135deg, rgba(202, 202, 202, 0.6), rgba(255, 255, 255, 0.7));
 }
 
 .menu:hover
@@ -118,14 +120,13 @@ input {
     min-width: 18em;
     height: 3.5em;
     color: #666;
-    background: #e6e6e6;
+    background: var(--grayLinearFaded);
     border-radius: 0.8em;
     position: relative;
     margin: 1em 0 1em 0;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    outline: none;
     border: none;
     padding: 0.1em;
     text-align: center;
@@ -134,7 +135,7 @@ input {
 
 input:focus {
     box-shadow: 0px 0px 0px 0px;
-    border:#4158d0;
+    border-width: 1em;
 }
 
 input:required::placeholder, input:invalid {
@@ -185,13 +186,13 @@ input:focus::placeholder {
 button, input[type="submit"]{
     cursor: pointer;
     color: #fff;
-    background: #57b846;
+    background: var(--greenLinear);
 }
 
 
 input[type="submit"]:hover{
     cursor: pointer;
-    background: #333;
+    background: var(--basicBackgroundColor);
 }
 
 /*===============================NAVBAR=======================================*/
