--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
     <input type="text" placeholder="Username" name="username" minlength="8" maxlength="30" required>
     <input type="email" placeholder="Email" name="email" required>
     <input type="password" placeholder="Password" name="password" minlength="8" maxlength="30" required>
-    <input type="password" placeholder="Confirm" name="password" minlength="8" maxlength="30" required>
+    <input type="password" placeholder="Confirm" name="password_confirmation" minlength="8" maxlength="30" required>
     <input type="text" placeholder="Referral" name="referral">
     <input type="submit" value="Sign Up">
     <a class="link" href="/login">Log in</a>
